--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <input type="range" id="volume" min="0" max="1" step="0.01" value="1">
   </div>
 
+  <form id="logger">
+    <textarea class="form-elem" id="log" name="log" readonly></textarea>
+  </form>
+
   <script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
