A2HSに対応。 参考URL: https://developer.mozilla.org/ja/docs/Web/Progressive_web_apps/Add_to_home_screen

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./style.css">
   <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@1"></script>
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body>
   <label for="input-manifest">manifest(.m3u)</label>
