--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body>
-  <div id="manifests" class="anim-box slidein">
+  <div id="manifests" class="anim-box init">
     <button id="hide-channels">×</button><br>
     <label for="input-manifest">manifest(.m3u)</label>
     <input type="file" accept=".m3u" id="input-manifest">
