--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
   <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body>
-  <div id="manifests" class="anim-box init">
-    <button id="hide-channels">×</button><br>
+  <div id="ch-menu" class="anim-box init">
+    <!--<button id="hide-channels">×</button><br>-->
     <label for="input-manifest">manifest(.m3u)</label>
     <input type="file" accept=".m3u" id="input-manifest">
-    <ul id="manifests">
-    </ul>
+    <div id="manifests"></div>
   </div>
 
   <button id="channels">CHs</button>
