--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="manifests"></div>
   </div>
 
-  <button id="channels">CHs</button>
+  <div id="channels" class="openbtn"><span></span><span>Ch</span><span></span></div>
   <div id="radio">
     <div id="ch-indicator"><span id="ch-number">X</span> ch</div>
     <audio id="player">
