--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
 
   <div id="channels" class="openbtn"><span></span><span>Ch</span><span></span></div>
   <div id="radio">
-    <div id="ch-indicator"><span id="ch-number">X</span> ch</div>
+    <img id="prev-svg" class="control-svg" src="arrow.svg" alt="previous" />
+    <span id="ch-indicator"><span id="ch-number">X</span> ch</span>
+    <img id="next-svg" class="control-svg" src="arrow.svg" alt="next" />
     <audio id="player">
       Your browser does not support the
       <code>audio</code> element.
     </audio>
     <div id="controler">
-      <button id="previous">&lt;&lt;</button>
+      <!--<button id="previous">&lt;&lt;</button>-->
       <button id="play-pause">▶︎</button>
-      <button id="next">&gt;&gt;</button>
+      <!--<button id="next">&gt;&gt;</button>-->
     </div>
     <input type="range" id="volume" min="0" max="1" step="0.01" value="1">
   </div>
