--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="controler">
       <button id="previous" class="changebtn">&lt;&lt;</button>
       <div id="indicator">
-        <div id="ch-indicator"><span id="ch-number">X</span> ch</div>
+        <div id="ch-indicator"><span id="ch-number">X</span> <span id="ch-text">ch</span></div>
         <button id="play-pause">▶︎</button><br/>
         <input type="range" id="volume" min="0" max="1" step="0.01" value="1">
       </div>
