音量スライダーを縦向きに変更。

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div id="indicator">
         <div id="ch-indicator"><span id="ch-number">X</span> <span id="ch-text">ch</span></div>
         <button id="play-pause">▶︎</button><br/>
-        <input type="range" id="volume" min="0" max="1" step="0.01" value="1">
+        <input type="range" id="volume" min="0" max="1" step="0.01" value="1" orient="vertical">
       </div>
       <button id="next" class="changebtn">&gt;&gt;</button>
     </div>
